# lwhich

./: CMakeLists.txt  README.md
man/: CMakeLists.txt  lwhich.1
src/: CMakeLists.txt  lwhich.c
